--- a/app.css
+++ b/app.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 
 body{
     width: 100%;
     outline: none;
     min-height: 100vh;
+    background-color: #F1F1F1;
 }
 
 header{
@@ -22,6 +24,7 @@ header{
 .search-bar{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 10px;
     padding: 8px;
     border: 1px solid #616161;
@@ -47,3 +50,109 @@ header{
 .search-bar:focus{
     border: 1px solid #FFF;
 }
+
+.notification-user{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.notification-user .notification-btn{
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    background-color: #303030;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.notification-user .user{
+    display: flex;
+    align-items: center;
+    padding: 3px 3px 3px 8px;
+    background-color: #303030;
+    height: 32px;
+    gap: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.notification-user .user .name{
+    color: #FFF;
+    font-size: 12px;
+}
+
+.notification-user .user .user-short{
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #36FBA1;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.40);
+    padding: 0 5px;
+    border-radius: 6px;
+}
+
+main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-box{
+    margin-top: 32px;
+    width: 800px;
+}
+
+.trial-alert{
+    width: 100%;
+    background-color: #1A1A1A;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+}
+
+.trial-alert .text{
+    color: #FFF;
+    font-size: 13px;
+}
+
+.trial-alert .select-plan{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.trial-alert .select-plan a button{
+    width: 100px;
+    height: 28px;
+    background-color: #FFF;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    font-size: 12px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.trial-alert .select-plan img{
+    cursor: pointer;
+}
+
+.setup-guide{
+    width: 100%;
+    background-color: #FFF;
+    margin-top: 16px;
+    border-radius: 18px;
+    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
+    border: 1px solid #DBDBDB;
+    padding: 8px;
+}
+
+
