--- a/app.css
+++ b/app.css
@@ -152,7 +152,96 @@ main{
     border-radius: 18px;
     box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
     border: 1px solid #DBDBDB;
-    padding: 8px;
+    padding: 16px;
 }
 
+.setup-guide .setup-head{
+    width: 100%;
+}
 
+.setup-guide .setup-head .main-text{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.setup-guide .setup-head .main-text .text h2{
+    font-size: 14px;
+    font-weight: 600;
+    color: rgba(48, 48, 48, 1);
+}
+
+.setup-guide .setup-head .main-text .text p{
+    font-size: 13px;
+    margin-top: 4px;
+    color: rgba(48, 48, 48, 1);
+}
+
+.setup-guide .setup-head .main-text img{
+    cursor: pointer;
+}
+
+.setup-guide .setup-head .complete-bar{
+    margin-top: 16px;
+    font-size: 12px;
+    color: rgba(48, 48, 48, 1);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.setup-guide .setup-head .complete-bar .bar{
+    position: relative;
+    width: 72px;
+    height: 4px;
+    border-radius: 30px;
+    background-color: #E3E3E3;
+}
+
+.setup-guide .setup-head .complete-bar .bar .inner-bar{
+    width: 20%;
+    height: 100%;
+    background-color: #1A1A1A;
+    position: absolute;
+    left: 0;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.setup-guide .main-guide{
+    margin-top: 16px;
+    width: 100%;
+    /* height: 0px;
+    overflow: hidden; */
+}
+
+.setup-guide .main-guide .each-guide{
+    width: 100%;
+    margin-bottom: 2px;
+    cursor: pointer;
+}
+
+.setup-guide .main-guide .each-guide .guide-title{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.setup-guide .main-guide .each-guide .guide-title p{
+    font-size: 13px;
+}
+
+.setup-guide .main-guide .each-guide .guide-info{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 32px;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .guide-text{
+    width: 70%;
+    font-size: 13px;
+}
