--- a/app.css
+++ b/app.css
@@ -218,7 +218,7 @@ main{
 
 .setup-guide .main-guide .each-guide{
     width: 100%;
-    margin-bottom: 2px;
+    margin-bottom: 8px;
     cursor: pointer;
 }
 
@@ -242,6 +242,61 @@ main{
 }
 
 .setup-guide .main-guide .each-guide .guide-info .guide-text{
-    width: 70%;
+    width: 68%;
     font-size: 13px;
+    color: #616161;
+    font-weight: 500;
+    line-height: 1.5;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .guide-text p span a{
+    text-decoration: none;
+    font-size: 14px;
+    color: #005BD3;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .guide-text .buttons{
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .guide-text .buttons .main-btn{
+    width: 125px;
+    height: 30px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 6px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #F6F3F6;
+    background-color: #404040;
+    box-shadow: 0px 0px 0px 1.5px #333, 0px 1px 0px 1.5px #333, 0px 2px 0px 0px #000;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .guide-text .buttons .import-btn{
+    font-size: 12px;
+    font-weight: 600;
+    color: rgba(50, 50, 50, 1);
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 125px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .img-container{
+    position: relative;
+    width: auto;
+}
+
+.setup-guide .main-guide .each-guide .guide-info .img-container .blur{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    background: linear-gradient(to bottom, rgba(255,255,255, 1), rgba(255, 255, 255, 0.6));
 }
