--- a/app.css
+++ b/app.css
@@ -66,9 +66,78 @@ header{
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    position: relative;
+}
+
+.notification-user .notification-btn .notification-menu{
+    width: 385px;
+    background-color: #FFF;
+    border-radius: 14px;
+    border: 1px solid #DBDBDB;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+    position: absolute;
+    right: -150px;
+    top: -500px;
+    opacity: 0;
+    transition: all 400ms ease-in-out;
+    padding: 16px;
+    margin-top: 16px;
+}
+
+/* Notification button is clicked */
+.notification-user .notification-btn .notification-menu.active{
+    top: 100%;
+    opacity: 1;
+}
+
+.notification-user .notification-btn .notification-menu .heading{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.notification-user .notification-btn .notification-menu .heading h3{
+    font-size: 14px;
+    font-weight: 600;
+    color: #303030;
+}
+
+.notification-user .notification-btn .notification-menu .heading .icons{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.notification-user .notification-btn .notification-menu .heading .icons img{
+    padding: 4px;
+    transition: all 75ms ease-in-out;
+}
+
+.notification-user .notification-btn .notification-menu .heading .icons img:hover{
+    border: 1px solid #005BD3;
+    border-radius: 4px;
+}
+
+.notification-user .notification-btn .notification-menu .text{
+    width: 100%;
+    margin-top: 16px;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F1F1F1;
+}
+
+.notification-user .notification-btn .notification-menu .text p{
+    font-size: 13px;
+    font-weight: 600;
+    color: #616161;
+    width: 100%;
 }
 
 .notification-user .user{
+    position: relative;
     display: flex;
     align-items: center;
     padding: 3px 3px 3px 8px;
@@ -95,6 +164,134 @@ header{
     padding: 0 5px;
     border-radius: 6px;
 }
+
+.notification-user .user .menu-bar{
+    width: 320px;
+    margin-top: 16px;
+    padding-bottom: 6px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+    position: absolute;
+    right: 0;
+    top: -500px;
+    background-color: #FFF;
+    border-radius: 14px;
+    border: 1px solid #DBDBDB;
+    opacity: 0;
+    transition: all 400ms ease-in-out;
+}
+
+/* Where the menu bar is clicked/active */
+.notification-user .user .menu-bar.active{
+    top: 100%;
+    opacity: 1;
+}
+
+.notification-user .user .menu-bar .top{
+    width: 100%;
+    padding: 6px 4px;
+    border-bottom: 0.75px solid #E1E1E1;
+}
+
+.notification-user .user .menu-bar .top .name{
+    width: 100%;
+    background-color: #F1F1F1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4px 8px;
+    border-radius: 8px;
+}
+
+.notification-user .user .menu-bar .top .name .left-side{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.notification-user .user .menu-bar .top .name .left-side .short-name{
+    height: 28px;
+    width: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #36FBA1;
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.40);
+    border-radius: 6px;
+}
+
+.notification-user .user .menu-bar .top .name .left-side .long-name{
+    font-size: 13px;
+    color: #303030;
+    font-weight: 600;
+}
+
+.notification-user .user .menu-bar .top .house-label{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 4px;
+    padding: 6px;
+}
+
+.notification-user .user .menu-bar .top .house-label a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #303030;
+}
+
+.notification-user .user .menu-bar .nav-links{
+    padding: 4px 6px;
+    width: 100%;
+    border-bottom: 0.75px solid #E1E1E1;
+}
+
+.notification-user .user .menu-bar .nav-links ul, .notification-user .user .menu-bar .email-side ul{
+    list-style-type: none;
+    color: #303030;
+    font-size: 13px;
+    width: 100%;
+}
+
+.notification-user .user .menu-bar .nav-links ul li, .notification-user .user .menu-bar .email-side ul li{
+    width: 100%;
+    padding: 6px;
+    border-radius: 6px;
+    margin-top: 4px;
+    transition: all 1ms ease-in-out;
+}
+
+.notification-user .user .menu-bar .nav-links ul li a, .notification-user .user .menu-bar .email-side ul li a{
+    text-decoration: none;
+    color: #303030;
+}
+
+.notification-user .user .menu-bar .nav-links ul li:hover, .notification-user .user .menu-bar .email-side ul li:hover{
+    border: 2px solid #005BD3;
+}
+
+.notification-user .user .menu-bar .email-side{
+    width: 100%;
+    padding: 6px;
+}
+
+.notification-user .user .menu-bar .email-side .email{
+    padding: 8px;
+    width: 100%;
+}
+
+.notification-user .user .menu-bar .email-side .email .main-name{
+    font-size: 13px;
+    color: #303030;
+    font-weight: 500;
+}
+
+
+.notification-user .user .menu-bar .email-side .email .main-email{
+    font-size: 12px;
+    color: #616161;
+}
+
 
 main{
     width: 100%;
@@ -217,6 +414,7 @@ main{
     transition: all 500ms ease-in-out;
 }
 
+/* Show the guides */
 .setup-guide .main-guide.show-guides{
     height: auto;
 }
