--- a/app.css
+++ b/app.css
@@ -377,6 +377,11 @@ main{
 
 .setup-guide .setup-head .main-text img{
     cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.setup-guide .setup-head .main-text img.open{
+    transform: rotate(180deg);
 }
 
 .setup-guide .setup-head .complete-bar{
@@ -397,13 +402,13 @@ main{
 }
 
 .setup-guide .setup-head .complete-bar .bar .inner-bar{
-    width: 20%;
+    width: 0;
     height: 100%;
     background-color: #1A1A1A;
     position: absolute;
     left: 0;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+    transition: all 200ms ease-in-out;
+    border-radius: 30px;
 }
 
 .setup-guide .main-guide{
@@ -411,12 +416,7 @@ main{
     width: 100%;
     height: 0px;
     overflow: hidden;
-    transition: all 500ms ease-in-out;
-}
-
-/* Show the guides */
-.setup-guide .main-guide.show-guides{
-    height: auto;
+    transition: 400ms;
 }
 
 .setup-guide .main-guide .each-guide{
@@ -424,15 +424,17 @@ main{
     margin-bottom: 8px;
     cursor: pointer;
     padding-top: 8px;
+    padding-left: 8px;
     height: 32px;
     overflow: hidden;
     border-radius: 10px;
+    transition: 500ms;
 }
 
-/* This is where you channge the active class for each guide */
-.setup-guide .main-guide .each-guide.active{
+/* This is where you change the active class for each guide */
+.setup-guide .main-guide .each-guide.active-guide{
     background-color: #F3F3F3;
-    height: auto;
+    height: 150px;
 }
 
 .setup-guide .main-guide .each-guide .guide-title{
@@ -514,5 +516,9 @@ main{
     height: 25%;
     background-color: #F3F3F3;
     box-shadow: 0 -3px 5px #F3F3F3;
+}
+
+@media screen and (max-width: 720px){
+    
 }
 
